--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "minigrep"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Example project from the Rust Book"
 
 [lib]
 name = "minigrep"
@@ -9,3 +11,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+[profile.dev]
+opt-level =1
+
+[profile.release]
+opt-level = 3
